--- a/index.html
+++ b/index.html
@@ -1,20 +1,46 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Hang Man: Movies Edition</title>
-	</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Juan's Hangman</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Roboto+Mono" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  </head>
+<body>
+	<audio autoplay loop>
+      <source src="assets/images/jwMix.mp3">
+	</audio>
+  <div class ="row col-md-12" id = "jumbotron">
+      <h1>John Williams Composed Movies</h1>
+  </div>
+  <div class = "row">
+    <div class = "col-md-8" id = "instructions">
+      <p>Guess a John Williams composed movie. Press any key to begin.</p>
+      
+      </div>
+    <div class = "col-md-4" id = "console">
+      <div id = "word" class='spaces' style="font-size:28px; letter-spacing: 10px; ">
 
-	<body>
-		<script type="text/javascript">
-			
-				
+      </div>
+      <div id = "guess">
 
+      </div>
+      <div id = "used">
 
+      </div>
+      <div id = "wins">
 
+      </div>
+    </div>
+  <div class="row col-md-12" id ="footer">
+    <a href="/index.html" target="_blank">&copy; Copyright 2016 Juan Salamanca</a>
+  </div>
 
-		</script>
-
-
-
-	</body>
+<script src="assets/javascript/game.js"></script>
+</body>
 </html>
+
+
+
